learn use state and props and callback

--- a/buoi_15_create_CRUD_components/Form_CRUD/form-crud/src/components/contact.scss
+++ b/buoi_15_create_CRUD_components/Form_CRUD/form-crud/src/components/contact.scss
@@ -2,3 +2,23 @@
 .card  h4 {
     color: blue;
 }
+
+.container-card{
+    h4 {
+
+        cursor: pointer;
+        .custum-icon_plus{
+            font-size: 14px;
+            color: green;
+        }
+
+        .custum-icon_sort{
+            color: orange;
+        }
+
+        .custum-icon_times{
+            float: right;
+            color: red;
+        }
+    }
+}
